--- a/SPC/semester1_dev.tex
+++ b/SPC/semester1_dev.tex
@@ -50,6 +50,8 @@
 \activitychapter{../kinematica/2dim_onafhankelijkheidsbeginsel.tex}
 \activitychapter{../kinematica/2dim_eenparige_cirkelbeweging.tex}   
 \activitychapter{../kinematica/2dim_horizontale_worp.tex}
+\activitychapter{../kinematica/exercises/2dim_oef.tex}
+
 
 
 \part{Dynamica: De wetten van Newton}
