--- a/SPC/semester1.tex
+++ b/SPC/semester1.tex
@@ -1,4 +1,4 @@
-\documentclass{xourse}
+% \documentclass{xourse}
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
@@ -48,12 +48,15 @@
 \activitysection{../kinematica/exercises/1dim_oef_vraagstukken_valbeweging.tex}
 
 
+
+
 \part{Tweedimensionale bewegingen}
 
 \activitychapter{../kinematica/2dim_intro.tex}
 \activitychapter{../kinematica/2dim_onafhankelijkheidsbeginsel.tex}
 \activitychapter{../kinematica/2dim_eenparige_cirkelbeweging.tex}    % causes next file to fail compilation with 'Missing {}' 
 \activitychapter{../kinematica/2dim_horizontale_worp.tex}
+\activitychapter{../kinematica/exercises/2dim_oef.tex}
 
 
 
