--- a/semester1.tex
+++ b/semester1.tex
@@ -1,5 +1,5 @@
 %\documentclass[12pt,numbers,noauthor,nooutcomes,wordchoicegiven]{xourse}
-%\documentclass{xourse}
+\documentclass{xourse}
 
 %%
 %% OBSOLETE: zie folder SPC
