--- a/SPC/semester1.tex
+++ b/SPC/semester1.tex
@@ -55,7 +55,7 @@
 \activitychapter{../kinematica/2dim_eenparige_cirkelbeweging.tex} % causes next file to fail compilation with 'Missing {}'
 \activitychapter{../kinematica/2dim_horizontale_worp.tex}
 \activitychapter{../kinematica/exercises/2dim_oef.tex}
-\activitychapter{../kinematica/exercises/2dim_oef_sw} % Staat niet op het leerplan
+% \activitychapter{../kinematica/exercises/2dim_oef_sw} % Staat niet op het leerplan
 
 
 \end{document}
